# flutter-connect-to-cpp-ex1

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/connect_flutter_to_cpp_ex3/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/cpp/check_connect/: check_connect.cpp  check_connect.h  check_connect_native.cpp
ios/cpp/slider/: slider.cpp  slider.h  slider_native.cpp
lib/: main.dart
lib/const/: const_var.dart
lib/cpp/check_connect/: check_connect.dart
lib/cpp/slider_test/: slider_test.dart
lib/screen/: check_connect_screen.dart  main_screen.dart
lib/screen/bottom_nav/: home_screen.dart  setting_screen.dart
test/: widget_test.dart
